--- a/chornado_app/static/styles.css
+++ b/chornado_app/static/styles.css
@@ -1,12 +1,13 @@
 #navBar {
-    background-color: #5448C8;
+    /* background-color: #6C91BF */
+    background-color: #190933;
 }
 
 #bodyBG {
-    background-color: #4ECDC4;
+    background-color: #5FB0B7;
     font-family: 'Oswald', sans-serif
 }
 
 #bodyMain {
-    background-color: #FB6107;
+    background-color: #F5ECCD;
 }
