Reorganize and comment app files and templates. Add helper functions module and rewards page

--- a/chornado_app/static/styles.css
+++ b/chornado_app/static/styles.css
@@ -1,6 +1,6 @@
 #navBar {
-    /* background-color: #6C91BF */
-    background-color: #190933;
+    background-color: #6C91BF;
+    /* background-color: #190933; */
 }
 
 #bodyBG {
