--- a/chornado_app/templates/delete_user.html
+++ b/chornado_app/templates/delete_user.html
@@ -9,7 +9,8 @@
                     <form action="/delete/{{ user.id }}" method="post">
                         {{ template_form.hidden_tag() }}
                         {{ template_form.user_id(value=user.id) }}
-                        {{ template_form.delete }}{{ template_form.cancel }}
+                        {{ template_form.delete(class="btn btn-secondary") }}
+                        <a href="{{ url_for('home') }}"><button type="button" class="btn btn-secondary">Cancel</button></a>
                     </form>
                 </div>
             </div>
