--- a/chornado_app/templates/_parent_base.html
+++ b/chornado_app/templates/_parent_base.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/parent_chores">Chores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/rewards">Rewards</a>
+                        <a class="nav-link" href="/parent_rewards">Rewards</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
@@ -38,7 +38,28 @@
         </div>
     </nav>
     <div class="container-fluid">
-    {% block content %}{% endblock %}
+        <div class="row">
+            <div class="col-xl-8 col-11 m-4 mx-xl-auto py-2 rounded" id="bodyMain">
+                <div class="row">
+                    <p>Welcome to Chornado</p>
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <div class="alert alert-success d-flex align-items-center" role="alert">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                                </svg>
+                                <ul class="flashes">
+                                    {% for message in messages %}
+                                        <li>{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        {% endif %}
+                    {% endwith %}
+                </div>
+                {% block content %}{% endblock %}            
+            </div>
+        </div>        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
