--- a/chornado_app/templates/children.html
+++ b/chornado_app/templates/children.html
@@ -1,65 +1,80 @@
 {% extends "_parent_base.html" %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8 col-11 m-4 mx-xl-auto py-2 rounded" id="bodyMain">                
-                <div class="row">
-                    {% for child in child_data %}
-                        <h3>{{ child.first_name }} {{ child.points }} points</h3>
-                        <table class = "table">
-                            <thead>
-                                <tr>
-                                    <th scope="col" class="text-start">Chore</th>
-                                    <th scope="col" class="text-end">Points</th>
-                                    <th scope="col" class="text-end">Status</th>
-                                    <th scope="col" class="text-end">Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for chore in child.chores %}
-                                    <tr>
-                                        <th scope="row" class="text-start">{{ chore["name"] }}</th>
-                                        <td class="text-end">{{ chore["points"] }}</td>
-                                        <td class="text-end">{{ chore["status"] }}</td>
-                                        <td class="text-end"></td>                                                                     
-                                    </tr>
-                                {% endfor %}
-                            </tbody>                        
-                        </table>
+    <div class="row">
+        {% if template_form.errors %}
+            <div class="alert alert-danger d-flex align-items-center" role="alert">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+                <ul>
+                    {% for field_name, field_errors in template_form.errors|dictsort if field_errors %}
+                        {% for error in field_errors %}
+                            <li>{{ template_form[field_name].label }}: {{ error }}</li>
+                        {% endfor %}
                     {% endfor %}
-                </div>
-                <div class="row">
-                    <form action="/children" method="post">
-                        {{ template_form.hidden_tag() }}
-                        {% if template_form.errors %}
-                            <div class="alert alert-danger d-flex align-items-center" role="alert">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
-                                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                                </svg>
-                                <ul>
-                                    {% for field_name, field_errors in template_form.errors|dictsort if field_errors %}
-                                        {% for error in field_errors %}
-                                            <li>{{ template_form[field_name].label }}: {{ error }}</li>
-                                        {% endfor %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        {% endif %}
-                        {{ template_form.username.label }}
-                        {{ template_form.username() }}<br>
-                        {{ template_form.first_name.label }}
-                        {{ template_form.first_name }}
-                        {{ template_form.last_name.label }}
-                        {{ template_form.last_name }}<br>
-                        {{ template_form.password.label }}
-                        {{ template_form.password() }}
-                        {{ template_form.confirm_password.label }}
-                        {{ template_form.confirm_password }}
-                        {{ template_form.submit() }}
-                    </form>
-                </div>
+                </ul>
             </div>
-        </div>
+        {% endif %}
+    </div>
+    <div class="row">
+        {% for child in child_data %}
+            <table class="table">
+                <tr>
+                    <th scope="row" class="text-start"><h3>{{ child.first_name }}</h3></th>
+                    <td class="text-start">{{ child.points }} points</td>
+                    <td class="text-end">
+                        <a href="{{ url_for('delete_user', user_id=child.id) }}">Delete</a>
+                        <a href="{{ url_for('pass_reset', user_id=child.id) }}">Reset Password</a>
+                    </td>
+                </tr>
+            </table>
+            <table class ="table">
+                <thead>
+                    <tr>
+                        <th scope="col" class="text-start">Chore</th>
+                        <th scope="col" class="text-end">Points</th>
+                        <th scope="col" class="text-end">Status</th>
+                        <th scope="col" class="text-end">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for chore in child.chores %}
+                        <tr>
+                            <form action="/children" method="post">
+                                {{ chore_form.csrf_token() }}
+                                {{ chore_form.chore_id(value=chore.id) }}
+                                    <th scope="row" class="text-start">{{ chore["name"] }}</th>
+                                    <td class="text-end">{{ chore["points"] }}</td>
+                                    <td class="text-end">{{ chore["state"] }}</td>
+                                    <td class="text-end">
+                                        {{ chore_form.delete() }}
+                                        {{ chore_form.approve() }}
+                                        {% if chore["state"] == "Complete" %}
+                                            {{ chore_form.reject() }}
+                                        {% endif %}
+                                    </td>
+                            </form>
+                        </tr>
+                    {% endfor %}
+                </tbody>                        
+            </table>
+        {% endfor %}
+    </div>
+    <div class="row">
+        <form action="/children" method="post">
+            {{ template_form.hidden_tag() }}
+            {{ template_form.username.label }}
+            {{ template_form.username() }}<br>
+            {{ template_form.first_name.label }}
+            {{ template_form.first_name }}
+            {{ template_form.last_name.label }}
+            {{ template_form.last_name }}<br>
+            {{ template_form.password.label }}
+            {{ template_form.password() }}
+            {{ template_form.confirm_password.label }}
+            {{ template_form.confirm_password }}
+            {{ template_form.submit() }}
+        </form>
     </div>
 {% endblock %}
