--- a/chornado_app/templates/pass_reset.html
+++ b/chornado_app/templates/pass_reset.html
@@ -1,34 +1,14 @@
-{% extends "_parent_base.html" %}
+{% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8 col-11 m-4 mx-xl-auto py-2 rounded" id="bodyMain">                
-                <div class="row">
-                    <h3>Password reset for {{ user.first_name }}</h3>
-                    <form action="/pass_reset/{{ user.id }}" method="post">
-                        {{ template_form.hidden_tag() }}
-                        {% if template_form.errors %}
-                            <div class="alert alert-danger d-flex align-items-center" role="alert">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
-                                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                                </svg>
-                                <ul>
-                                    {% for field_name, field_errors in template_form.errors|dictsort if field_errors %}
-                                        {% for error in field_errors %}
-                                            <li>{{ template_form[field_name].label }}: {{ error }}</li>
-                                        {% endfor %}
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        {% endif %}
-                        {{ template_form.user_id(value=user.id) }}
-                        {{ template_form.new_password }}
-                        {{ template_form.confirm_password }}
-                        {{ template_form.submit }}
-                    </form>
-                </div>
-            </div>
-        </div>
+    <div class="row">
+        <h3>Password reset for {{ user.first_name }}</h3>
+        <form action="/pass_reset/{{ user.id }}" method="post">
+            {{ template_form.hidden_tag() }}
+            {{ template_form.user_id(value=user.id) }}
+            {{ template_form.new_password }}
+            {{ template_form.confirm_password }}
+            {{ template_form.submit }}
+        </form>
     </div>
 {% endblock %}
