--- a/chornado_app/templates/parents/children.html
+++ b/chornado_app/templates/parents/children.html
@@ -1,22 +1,6 @@
-{% extends "_parent_base.html" %}
+{% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
-        {% if template_form.errors %}
-            <div class="alert alert-danger d-flex align-items-center" role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
-                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-                <ul>
-                    {% for field_name, field_errors in template_form.errors|dictsort if field_errors %}
-                        {% for error in field_errors %}
-                            <li>{{ template_form[field_name].label }}: {{ error }}</li>
-                        {% endfor %}
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-    </div>
     <div class="row">
         {% for child in child_data %}
             <table class="table">
@@ -41,7 +25,7 @@
                 <tbody>
                     {% for chore in child.chores %}
                         <tr>
-                            <form action="/children" method="post">
+                            <form action="/parent/children" method="post">
                                 {{ chore_form.csrf_token() }}
                                 {{ chore_form.chore_id(value=chore.id) }}
                                     <th scope="row" class="text-start">{{ chore["name"] }}</th>
@@ -62,7 +46,7 @@
         {% endfor %}
     </div>
     <div class="row">
-        <form action="/children" method="post">
+        <form action="/parent/children" method="post">
             {{ template_form.hidden_tag() }}
             {{ template_form.username.label }}
             {{ template_form.username() }}<br>
