--- a/chornado_app/templates/parents/rewards.html
+++ b/chornado_app/templates/parents/rewards.html
@@ -1,22 +1,6 @@
-{% extends "_parent_base.html" %}
+{% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
-        {% if template_form.errors %}
-            <div class="alert alert-danger d-flex align-items-center" role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
-                    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                </svg>
-                <ul>                                    
-                    {% for field_name, field_errors in template_form.errors|dictsort if field_errors %}
-                        {% for error in field_errors %}
-                            <li>{{ template_form[field_name].label }}: {{ error }}</li>
-                        {% endfor %}
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-    </div>
     <div class="row">
         <table class="table">
             <thead>
@@ -29,7 +13,7 @@
             <tbody>
                 {% for reward in rewards %}                              
                     <tr>
-                        <form action="/parent_rewards" method="post">
+                        <form action="/parent/rewards" method="post">
                             {{ template_form.csrf_token() }}
                             {{ template_form.reward_id(value=reward.id) }}
                             <td>{{ template_form.name(value=reward.name) }}</td>
@@ -39,7 +23,7 @@
                     </tr>
                 {% endfor %}
                 <tr>
-                    <form action="/parent_rewards" method="post">
+                    <form action="/parent/rewards" method="post">
                         {{ template_form.hidden_tag() }}
                         <td>{{ template_form.name }}</td>
                         <td>{{ template_form.cost }}</td>
