--- a/chornado_app/templates/parents/_parent_base.html
+++ b/chornado_app/templates/parents/_parent_base.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="/parent/rewards">Rewards</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/parent/settings">Settings</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
