--- a/chornado_app/templates/parents/home.html
+++ b/chornado_app/templates/parents/home.html
@@ -1,30 +1,32 @@
 {% extends "parents/_parent_base.html" %}
 
 {% block content %}
-    <div class="row">
-        <div class="alert alert-info d-flex align-items-center" role="alert">
-            <ul class="list-group-flush">
-                {% for notification in notifications %}
-                    {% if notification.type == 'chore' %}
-                        <form action="/parent/children" method="post">
-                            {{ chore_form.csrf_token() }}
-                            {{ chore_form.chore_id(value=notification.chore_id) }}
-                            <li class="list-group-item list-group-item-info">{{ notification.message }} {{ chore_form.approve }}{{ chore_form.reject }}</li>
-                        </form>
-                    {% elif notification.type == 'reward' %}
-                        <form action="/parent/rewards" method="post">
-                            {{ reward_form.csrf_token }}
-                            {{ reward_form.reward_id(value=notification.reward_id) }}
-                            {{ reward_form.cost(hidden="True", value=1) }}
-                            {{ reward_form.name(hidden="True", value="name") }}
-                            {{ reward_form.notification_id(value=notification.id) }}
-                            <li class="list-group-item list-group-item-info">{{ notification.message }} {{ reward_form.deliver }}</li>
-                        </form>
-                    {% endif %}
-                {% endfor %}
-            </ul>
+    {% if notifications.count() > 0 %}
+        <div class="row">
+            <div class="alert alert-info d-flex align-items-center" role="alert">
+                <ul class="list-group-flush">
+                    {% for notification in notifications %}
+                        {% if notification.type == 'chore' %}
+                            <form action="/parent/children" method="post">
+                                {{ chore_form.csrf_token() }}
+                                {{ chore_form.chore_id(value=notification.chore_id) }}
+                                <li class="list-group-item list-group-item-info">{{ notification.message }} {{ chore_form.approve }}{{ chore_form.reject }}</li>
+                            </form>
+                        {% elif notification.type == 'reward' %}
+                            <form action="/parent/rewards" method="post">
+                                {{ reward_form.csrf_token }}
+                                {{ reward_form.reward_id(value=notification.reward_id) }}
+                                {{ reward_form.cost(hidden="True", value=1) }}
+                                {{ reward_form.name(hidden="True", value="name") }}
+                                {{ reward_form.notification_id(value=notification.id) }}
+                                <li class="list-group-item list-group-item-info">{{ notification.message }} {{ reward_form.deliver }}</li>
+                            </form>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-    </div>
+    {% endif %}
     <div class="row">
         <table class = "table">
             <thead>
