--- a/chornado_app/templates/parents/settings.html
+++ b/chornado_app/templates/parents/settings.html
@@ -15,6 +15,6 @@
         </form>
     </div>
     <div class="row">
-        <a href="{{ url_for('routes.delete_user', user_id=parent.id) }}">Delete Account</a>
+        <a href="{{ url_for('routes.delete_parent', user_id=parent.id) }}">Delete Account</a>
     </div>
 {% endblock %}
