--- a/chornado_app/templates/delete_child.html
+++ b/chornado_app/templates/delete_child.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
         <h3>Are you sure you want to delete {{ user.first_name }}?</h3>
-        <form action="/delete/{{ user.id }}" method="post">
+        <form action="/delete_child/{{ user.id }}" method="post">
             {{ template_form.hidden_tag() }}
             {{ template_form.user_id(value=user.id) }}
             {{ template_form.delete(class="btn btn-secondary") }}
